2014-02-09  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidPagerView.java (onLayout()): Removed some debugging output.
	* CAndroidGridView.java (reload()): Added call to 'requestLayout()'
	  operation to see if Android realize that something changed.

2014-01-15  Alessandro <aantonello@paralaxe.com.br>

	* Makefile: Updated 'install' target to work in the same way in all
	  machines.
	* AbstractView.java (update(int)): New function to manually layout a
	  view hierarchy.
	* CRect.java (deflateMargins(View)): Buggy. Not all LayoutParams can be
	  casted to MarginLayoutParams.

2013-12-17  Alessandro <aantonello@paralaxe.com.br>

	* SFBluetoothSocket.java: Added bluetooth support.
	* sfBluetooth.java: Added bluetooth support.
	* ERROR.java (ERROR.NOTSUP): Added error constant.
	* res/jguime/pt_BR/errors.xml: Added message for new error constant.
	* res/jguime/en_US/errors.xml: Added message for new error constant.
	* thread_t.java (start()): When start() fails, the error code is stored
	  in and can be retrieved from getExitCode() method.
	* SFAsset.java (getMessage()): Buggy naming the file to read messages.
	* CXmlTok.java (skipByteOrderMark()): Correct function to search for a
	  byte order mark in a stream of bytes.

2013-12-09  Alessandro <aantonello@paralaxe.com.br>

	* SFAsset.java (getMessage()): New function to load a message from the
	  standard error string table file.
	* AbstractView.java: Added exception protect try...catch blocks for
	  exceptions not documented in Android SDK.

2013-12-06  Alessandro <aantonello@paralaxe.com.br>

	* strings.java: Updating documentation.
	* CXmlTok.java (LoadStream()): Buggy! Function was not checking for
	  errors on load streams.

2013-12-04  Alessandro <aantonello@paralaxe.com.br>

	* CRect.java (deflatePadding(), deflateMargins()): Two new functions to
	  help working with Android layout constraints.

2013-11-22  Alessandro <aantonello@paralaxe.com.br>
