@@ -1,3 +1,9 @@
+2014-02-10  Alessandro <aantonello@paralaxe.com.br>
+
+	* CAndroidPagerView.java (onInterceptTouchEvent()): Changed to better
+	  control when the view will intercept the touch events and when not.
+	  Enable component views to intercept touch events before the pager.
+
 2014-02-09  Alessandro <aantonello@paralaxe.com.br>
 
 	* CAndroidPagerView.java (onLayout()): Removed some debugging output.
